--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -14,14 +14,19 @@
                 </div>
 
                 <div class="col-md-12  " style="text-align:center;margin-top: 20px">
-                    <button class="btn btn-sm red-mint" style="border-radius: 20px"><i class="fa fa-camera"></i> Change
+                    <button class="btn btn-sm red-mint" ng-click="group('general')" style="border-radius: 20px"><i class="fa fa-camera"></i> Change
                         Profile Photo
                     </button>
                 </div>
 
                 <div class="col-md-12  " style="text-align:center;margin-top: 20px">
-                    <button class="btn btn-sm " style="border-radius: 20px"><i class="fa fa-camera"></i> Upload Photo
-                    </button>
+                    <div class="fileUpload btn btn-sm ">
+                                            <span><i class="fa fa-camera"></i> Upload Photos
+                                            </span>
+                        <input type="file" id="myFile"
+                               onchange="angular.element(this).scope().uploadFile(this.files)"
+                               class="upload">
+                    </div>
                 </div>
 
                 <div class="col-md-12  " style="margin-top:10px;margin-bottom:10px;text-align: center;color:red">
