--- a/src/app/navigation/settings/settingNavigation.html
+++ b/src/app/navigation/settings/settingNavigation.html
@@ -23,17 +23,17 @@
                                     <span class="title">Contact Filters</span>
                                 </a>
                             </li>
-                            <li ng-class="{ activateSettingNavBar: isActive('/settings/privacySettings')}" class="nav-item" id="decline">
+                            <li ng-class="{ activateSettingNavBar: isActive('/settings/privacySettings')}" class="nav-item">
                                 <a ui-sref="settings.privacySettings" class="nav-link ">
                                     <span class="title">Privacy Settings</span>
                                 </a>
                             </li>
-                            <li ng-class="{ activateSettingNavBar: isActive('/settings/membershipDetails')}" class="nav-item" id="decline">
+                            <li ng-class="{ activateSettingNavBar: isActive('/settings/membershipDetails')}" class="nav-item" >
                                 <a ui-sref="settings.membershipDetails" class="nav-link ">
                                     <span class="title">Membership Details</span>
                                 </a>
                             </li>
-                            <li ng-class="{ activateSettingNavBar: isActive('/settings/deactivateProfile')}" class="nav-item" id="decline">
+                            <li ng-class="{ activateSettingNavBar: isActive('/settings/deactivateProfile')}" class="nav-item" >
                                 <a ui-sref="settings.deactivateProfile" class="nav-link ">
                                     <span class="title">Deactivate Profiles</span>
                                 </a>
