--- a/src/app/toolbar/profile/profileToolbar.html
+++ b/src/app/toolbar/profile/profileToolbar.html
@@ -18,7 +18,7 @@
 				<!-- DOC: Remove "hide" class to enable the page header actions -->
 				<div class="page-actions">
 					<ul class="tool-link">
-						<li><a ui-sref="app">HOME</a></li>
+						<li style="background-color: #00c29e"><a ui-sref="app">HOME</a></li>
 						<li><a ui-sref="matches">MATCHES</a></li>
 						<li><a ui-sref="search">SEARCH</a></li>
 						<li><a ui-sref="messages">INBOX</a></li>
@@ -72,7 +72,7 @@
 
 			<!-- END PAGE TOP -->
 		</div>
-		<div class="row">
+		<div class="row" style="background-color: #00c29e">
 			<div class="col-md-1"></div>
 			<div class="col-md-10">
 				<div class="main-heading">
