--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -456,27 +456,27 @@
                                             </tr>
                                             <tr>
                                                 <td> Physical Type </td>
-                                                <td> {{pref.physical_status}} </td>
+                                                <td> <span ng-if="(pref.physical_status != null">{{pref.physical_status}}</span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Mother Tongue </td>
-                                                <td> {{pref.mothertongue_txt}} </td>
+                                                <td> <span ng-if="(pref.mothertongue_txt != null">{{pref.mothertongue_txt}}</span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Marital Status </td>
-                                                <td> {{pref.marital_status}} </td>
+                                                <td> <span ng-if="(pref.marital_status != null">{{pref.marital_status}}</span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Eating Habits </td>
-                                                <td> {{pref.eating_habits}} </td>
+                                                <td> <span ng-if="(pref.eating_habits != null">{{pref.eating_habits}}</span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Drinking Habits </td>
-                                                <td> {{pref.drinking_habits}} </td>
+                                                <td><span ng-if="(pref.drinking_habits != null"> {{pref.drinking_habits}} </span></td>
                                             </tr>
                                             <tr>
                                                 <td> Smoking Habits </td>
-                                                <td> {{pref.smoking_habits}} </td>
+                                                <td> <span ng-if="(pref.smoking_habits != null">{{pref.smoking_habits}}</span> </td>
                                             </tr>
                                             </tbody>
                                         </table>
@@ -495,21 +495,21 @@
                                             <tbody>
                                             <tr>
                                                 <td> Religion </td>
-                                                <td> {{pref.religion_txt}} </td>
+                                                <td> <span ng-if="(pref.religion_txt != null">{{pref.religion_txt}}</span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Caste </td>
-                                                <td> {{pref.caste}} </td>
+                                                <td> <span ng-if="(pref.caste != null">{{pref.caste}}</span> </td>
                                             </tr>
 
 
                                             <tr>
                                                 <td> Gothram </td>
-                                                <td> {{pref.gothram}}</td>
+                                                <td> <span ng-if="(pref.gothram != null">{{pref.gothram}}</span></td>
                                             </tr>
                                             <tr>
                                                 <td> Star </td>
-                                                <td> {{pref.star}} </td>
+                                                <td> <span ng-if="(pref.star != null">{{pref.star}}</span> </td>
                                             </tr>
 
                                             </tbody>
@@ -530,15 +530,15 @@
                                             <tbody>
                                             <tr>
                                                 <td> Education </td>
-                                                <td> {{pref.education}} </td>
+                                                <td> <span ng-if="(pref.education != null">{{pref.education}}</span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Occupation </td>
-                                                <td> {{pref.occupation}} </td>
+                                                <td> <span ng-if="(pref.occupation != null">{{pref.occupation}}</span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Annual Income </td>
-                                                <td> {{pref.income}}  </td>
+                                                <td> <span ng-if="(pref.income != null">{{pref.income}}</span>  </td>
                                             </tr>
 
 
@@ -560,19 +560,19 @@
                                             <tbody>
                                             <tr>
                                                 <td> Country </td>
-                                                <td> {{pref.country_name}} </td>
+                                                <td> <span ng-if="(pref.country_name != null">{{pref.country_name}}</span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Residing State </td>
-                                                <td> {{pref.state_name}} </td>
+                                                <td> <span ng-if="(pref.state_name != null">{{pref.state_name}}</span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Residing City </td>
-                                                <td> {{pref.city_name}}  </td>
+                                                <td> <span ng-if="(pref.city_name != null">{{pref.city_name}} </span> </td>
                                             </tr>
                                             <tr>
                                                 <td> Citizenship </td>
-                                                <td> {{prefnationality_txt}}</td>
+                                                <td> <span ng-if="(pref.nationality_txt != null">{{pref.nationality_txt}}</span></td>
                                             </tr>
 
 
