--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-    <div class="portlet light form-fit bordered col-md-offset-6 col-md-5 margin-top-30 reg-pannel">
+    <div class="portlet light form-fit bordered col-md-offset-7 col-md-5 margin-top-30 reg-pannel">
         <div class="portlet-title reg-pannel-title">
             <div class="caption">
                 <span class="caption-subject  font-black bold uppercase">Registration</span>
@@ -10,16 +10,16 @@
             </div>
 
         </div>
-        <div class="portlet-body form" style="padding: 20px">
+        <div class="portlet-body form" style="margin-left:20px;margin-right:20px">
             <!-- BEGIN FORM-->
-            <form name="regForm" class="form-horizontal  ">
+            <form name="regForm" class=" form-horizontal  form-body">
                 <br>
 
-                <div class="row" style="color: red;text-align: center;margin: 20px">
+                <div class="row" style="color: red;text-align: center;">
                     {{message}}
                 </div>
 
-                <div class="form-group padding-20">
+                <div class="form-group ">
                     <label class="col-md-3 control-label text-left">PROFILE FOR</label>
 
                     <div class="col-md-8">
