--- a/src/app/main/login/login.css
+++ b/src/app/main/login/login.css
@@ -105,3 +105,9 @@ padding-top:5px;}
    font-size:12pt!important;
     font-weight: 400 !important; 
 }
+.modal-content{
+    border-radius: 15px!important;
+}
+.modal-header{
+    border-radius: 10px!important;
+}
