--- a/src/app/main/login/login.css
+++ b/src/app/main/login/login.css
@@ -111,3 +111,10 @@ padding-top:5px;}
 .modal-header{
     border-radius: 10px!important;
 }
+
+.reg-label{
+    font-family: source_sans;
+    color:#777777;
+    font-size: 14px;
+
+}
