--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -165,6 +165,13 @@
                         </button>
                     </div>
                 </div>
+                <div class="form-group ">
+                    <label class="col-md-3 control-label"></label>
+
+                    <div class="col-md-8" style="text-align: center" style="color: grey">
+                        I agree the <a>Terms</a> and <a>Privacy</a>
+                    </div>
+                </div>
             </form>
             <!-- END FORM-->
         </div>
