--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -1,10 +1,10 @@
 <div class="col-md-12">
     <div class="portlet light form-fit bordered col-md-offset-7 col-md-5 margin-top-30 reg-pannel">
-        <div class="portlet-title reg-pannel-title">
+        <div class="portlet-title reg-pannel-title" style="height: 78px">
             <div class="caption">
-                <span class="caption-subject  font-black bold uppercase">Registration</span>
+                <span class=" reg-header uppercase">Registration</span>
 
-                <div class="caption-helper font-black font-sm">Please take a moment to complete all of the information
+                <div class="caption-helper reg-label" style="margin-top: 10px">Please take a moment to complete all of the information
                     below.
                 </div>
             </div>
@@ -116,7 +116,7 @@
                     <label class="col-md-3 control-label reg-label">EMAIL<span style="color: red">*</span></label>
 
                     <div class="col-md-8">
-                        <input type="email" ng-model="reg.email" required class="form-control input-rounded" placeholder="Email Address">
+                        <input type="email" ng-model="reg.email" required class="form-control reg-box input-rounded" placeholder="Email Address">
                     </div>
                 </div>
                 <div class="form-group">
