--- a/src/app/core/layouts/regLayout.html
+++ b/src/app/core/layouts/regLayout.html
@@ -2,7 +2,7 @@
         >
 <div ui-view="toolbar"></div>
 <div class="clearfix"></div>
-    <div class="page-container" style=" background-image: url('../assets/images/loginimage.jpg');">
+    <div class="page-container" style="background-color: white">
 
 
         <div ui-view="content"></div>
