--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -123,12 +123,12 @@
                     <label class="col-md-3 control-label reg-label">MOBILE NUMBER<span style="color: red">*</span></label>
 
                     <div class="col-md-3">
-                        <select class="form-control input-rounded" required ng-model="reg.code">
-                            <option>+ 91</option>
-                            <option>+ 04</option>
-                            <option>+ 90</option>
-                            <option>+ 54</option>
-                            <option>+ 65</option>
+                        <select class="form-control " required ng-model="reg.code">
+                            <option ng-selected="true" selected="selected" value="91">+ 91</option>
+                            <option value="04">+ 04</option>
+                            <option value="90">+ 90</option>
+                            <option value="54">+ 54</option>
+                            <option value="65">+ 65</option>
                         </select>
                     </div>
 
