--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -1,8 +1,8 @@
 <div class="page-content-wrapper">
     <!-- BEGIN CONTENT BODY -->
-    <div class="page-content">
+    <div class="page-content" >
         <!-- BEGIN PAGE HEAD-->
-        <div class="page-head">
+        <div class="page-head" style="margin-left: 20px">
             <div class="row">
 
                 <div class="col-md-12 text-right">
