--- a/src/app/navigation/matches/matchesNavigation.html
+++ b/src/app/navigation/matches/matchesNavigation.html
@@ -1,5 +1,5 @@
 <div class="page-sidebar-wrapper">
-    <div class="page-sidebar navbar-collapse collapse" style="background-color: #e4e8eb!important;">
+    <div class="page-sidebar navbar-collapse collapse" style="width:250px;background-color: #e4e8eb!important;">
         <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false"
             data-auto-scroll="true" data-slide-speed="200">
 
@@ -38,7 +38,7 @@
                         id="inbox">
                         <span><b>Refine Search</b></span>
                     </li>
-                    <li class="nav-item " style="text-align: center">
+                    <li class="nav-item " >
 
 
                         <!--<div class="input-group" style="width: 75%;margin: 25px; ">-->
@@ -280,12 +280,12 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 margin-top-10">
-                                    <div class="row">
-                                        <div class="col-md-12">
+                                    <div class="row" ng-click="selectFacet('mstatusDiv')" style="cursor: pointer">
+                                        <div class="col-md-12" >
                                             <span class="pull-left refined-search-header">Martial status</span>
                                             <span class="pull-right refined-search-header">
-                                                <a ng-if="mstatusDiv" ng-click="selectFacet('mstatusDiv')"><i class="fa fa-angle-right"></i></a>
-                                                <a  ng-if="!mstatusDiv" ng-click="selectFacet('mstatusDiv')"><i class="fa fa-angle-down"></i></a> </span>
+                                                <a ng-if="mstatusDiv" ><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!mstatusDiv" ><i class="fa fa-angle-down"></i></a> </span>
                                         </div>
                                     </div>
                                     <div class="row refined-search-area" ng-hide="mstatusDiv">
@@ -293,7 +293,8 @@
                                             <div ng-repeat="mstatus in martialStatus" class="row">
                                                 <div class="col-md-12">
                                             <span  class="pull-left refined-search-sub-label">
-                                                <input type="radio" value="{{mstatus.count}}" ng-model="match.mstatus" ng-click="search()" name="matrialstatus">{{mstatus.name}}
+                                                <!--<input type="radio" value="{{mstatus.count}}" ng-model="match.mstatus" ng-click="search()" name="matrialstatus">-->
+                                               <span class="pull-left" ng-click="facetSearch(mstatus.count,'mstatus')"> {{mstatus.name}}</span>
                                             </span>
                                                 </div>
                                             </div>
@@ -304,12 +305,12 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 margin-top-10">
-                                    <div class="row">
-                                        <div class="col-md-12">
+                                    <div class="row" ng-click="selectFacet('motherTongueDiv')" style="cursor: pointer">
+                                        <div class="col-md-12" >
                                             <span class="pull-left refined-search-header">MotherTongue</span>
                                              <span class="pull-right refined-search-header">
-                                                <a ng-if="motherTongueDiv" ng-click="selectFacet('motherTongueDiv')"><i class="fa fa-angle-right"></i></a>
-                                                <a  ng-if="!motherTongueDiv" ng-click="selectFacet('motherTongueDiv')"><i class="fa fa-angle-down"></i></a> </span>
+                                                <a ng-if="motherTongueDiv" ><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!motherTongueDiv" ><i class="fa fa-angle-down"></i></a> </span>
 
                                         </div>
                                     </div>
@@ -318,7 +319,9 @@
                                             <div ng-repeat="obj in populate.mothertongue | limitTo:mtcount" class="row">
                                                 <div class="col-md-12">
                                             <span  class="pull-left refined-search-sub-label">
-                                               <input type="checkbox" value="{{obj.id_mothertongue}}" name="motherTongue" ng-click="search()"/> {{obj.mothertongue}}
+                                               <!--<input type="checkbox" value="{{obj.id_mothertongue}}" name="motherTongue" ng-click="search()"/> {{obj.mothertongue}}-->
+                                                <span class="pull-left" ng-click="facetSearch(obj.id_mothertongue,'motherTongue')"> {{obj.mothertongue}}</span>
+
                                             </span>
                                                 </div>
                                             </div>
@@ -336,12 +339,12 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 margin-top-10">
-                                    <div class="row">
+                                    <div class="row" ng-click="selectFacet('religionDiv')" style="cursor: pointer">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Religion</span>
                                              <span class="pull-right refined-search-header">
-                                                <a ng-if="religionDiv" ng-click="selectFacet('religionDiv')"><i class="fa fa-angle-right"></i></a>
-                                                <a  ng-if="!religionDiv" ng-click="selectFacet('religionDiv')"><i class="fa fa-angle-down"></i></a> </span>
+                                                <a ng-if="religionDiv" ><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!religionDiv" ><i class="fa fa-angle-down"></i></a> </span>
 
                                         </div>
                                     </div>
@@ -350,7 +353,9 @@
                                             <div ng-repeat="obj in populate.religon | limitTo:relcount" class="row">
                                                 <div class="col-md-12">
                                             <span  class="pull-left refined-search-sub-label">
-                                               <input type="checkbox" value="{{obj.id_religion}}" name="religion" ng-click="search()"/> {{obj.religion}}
+                                               <!--<input type="checkbox" value="{{obj.id_religion}}" name="religion" ng-click="search()"/> {{obj.religion}}-->
+                         <span class="pull-left" ng-click="facetSearch(obj.id_religion,'religion')"> {{obj.religion}}</span>
+
                                             </span>
                                                 </div>
                                             </div>
@@ -368,12 +373,12 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 margin-top-10">
-                                    <div class="row">
+                                    <div class="row" ng-click="selectFacet('starDiv')" style="cursor: pointer">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Star</span>
                                             <span class="pull-right refined-search-header">
-                                                <a ng-if="starDiv" ng-click="selectFacet('starDiv')"><i class="fa fa-angle-right"></i></a>
-                                                <a  ng-if="!starDiv" ng-click="selectFacet('starDiv')"><i class="fa fa-angle-down"></i></a> </span>
+                                                <a ng-if="starDiv"><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!starDiv" ><i class="fa fa-angle-down"></i></a> </span>
 
                                         </div>
                                     </div>
@@ -382,7 +387,9 @@
                                             <div ng-repeat="obj in populate.stars | limitTo:starcount" class="row">
                                                 <div class="col-md-12">
                                             <span  class="pull-left refined-search-sub-label">
-                                               <input type="checkbox" value="{{obj.id_star}}" name="star" ng-click="search()" /> {{obj.star}}
+                                               <!--<input type="checkbox" value="{{obj.id_star}}" name="star" ng-click="search()" /> {{obj.star}}-->
+                        <span class="pull-left" ng-click="facetSearch(obj.id_star,'star')"> {{obj.star}}</span>
+
                                             </span>
                                                 </div>
                                             </div>
@@ -400,12 +407,12 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12 margin-top-10">
-                                    <div class="row">
+                                    <div class="row" ng-click="selectFacet('eduDiv')" style="cursor: pointer">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Education</span>
                                             <span class="pull-right refined-search-header">
-                                                <a ng-if="eduDiv" ng-click="selectFacet('eduDiv')"><i class="fa fa-angle-right"></i></a>
-                                                <a  ng-if="!eduDiv" ng-click="selectFacet('eduDiv')"><i class="fa fa-angle-down"></i></a> </span>
+                                                <a ng-if="eduDiv" ><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!eduDiv" ><i class="fa fa-angle-down"></i></a> </span>
 
                                         </div>
                                     </div>
@@ -414,7 +421,9 @@
                                             <div ng-repeat="obj in populate.education | limitTo:educount" class="row">
                                                 <div class="col-md-12">
                                             <span  class="pull-left refined-search-sub-label">
-                                               <input type="checkbox" value="{{obj.id_education}}" name="education" ng-click="search()" /> {{obj.education}}
+                                               <!--<input type="checkbox" value="{{obj.id_education}}" name="education" ng-click="search()" /> {{obj.education}}-->
+                                                                    <span class="pull-left" ng-click="facetSearch(obj.id_education,'education')"> {{obj.education}}</span>
+
                                             </span>
                                                 </div>
                                             </div>
@@ -433,12 +442,12 @@
 
                             <div class="row">
                                 <div class="col-md-12 margin-top-10">
-                                    <div class="row">
+                                    <div class="row" ng-click="selectFacet('empDiv')" style="cursor: pointer">
                                         <div class="col-md-12">
                                             <span class="pull-left refined-search-header">Employed In</span>
                                         <span class="pull-right refined-search-header">
-                                                <a ng-if="empDiv" ng-click="selectFacet('empDiv')"><i class="fa fa-angle-right"></i></a>
-                                                <a  ng-if="!empDiv" ng-click="selectFacet('empDiv')"><i class="fa fa-angle-down"></i></a> </span>
+                                                <a ng-if="empDiv" ><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!empDiv" ><i class="fa fa-angle-down"></i></a> </span>
 
                                         </div>
                                     </div>
@@ -446,9 +455,11 @@
                                         <div class="col-md-12 margin-top-10 margin-bottom-10">
                                             <div ng-repeat="obj in populate.occupation_category | limitTo:ocuCatcount" class="row">
                                                 <div class="col-md-12">
-                                            <span  class="pull-left refined-search-sub-label">
-                                               <input type="checkbox" value="{{obj.id_occupation_category}}" name="employed" ng-click="search()"/> {{obj.occupation_category}}
-                                            </span>
+                                            <!--<span  class="pull-left refined-search-sub-label">-->
+                                               <!--<input type="checkbox" value="{{obj.id_occupation_category}}" name="employed" ng-click="search()"/> {{obj.occupation_category}}-->
+                                            <!--</span>-->
+                                                    <span class="pull-left refined-search-sub-label" ng-click="facetSearch(obj.id_occupation_category,'occu_cat')"> {{obj.occupation_category}}</span>
+
                                                 </div>
                                             </div>
                                         </div>
@@ -456,7 +467,7 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <span ng-if="populate.occupation_category.length >= ocuCatcount" class="show-more-less pull-left" ng-click="showMoreMStatus('ocuCatcount','more')">More</span>
-                                                    <span ng-if="occupation_category.length != 4" class="show-more-less pull-right" ng-click="showMoreMStatus('ocuCatcount','less')">Less</span>
+                                                    <span ng-if="ocuCatcount != 4" class="show-more-less pull-right" ng-click="showMoreMStatus('ocuCatcount','less')">Less</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -466,21 +477,21 @@
                             <div class="row">
                                 <div class="col-md-12 margin-top-10">
                                     <div class="row">
-                                        <div class="col-md-12">
+                                        <div class="col-md-12" ng-click="selectFacet('ocuDiv')" style="cursor: pointer">
                                             <span class="pull-left refined-search-header">Occupation</span>
                                         <span class="pull-right refined-search-header">
-                                                <a ng-if="ocuDiv" ng-click="selectFacet('ocuDiv')"><i class="fa fa-angle-right"></i></a>
-                                                <a  ng-if="!ocuDiv" ng-click="selectFacet('ocuDiv')"><i class="fa fa-angle-down"></i></a> </span>
+                                                <a ng-if="ocuDiv" ><i class="fa fa-angle-right"></i></a>
+                                                <a  ng-if="!ocuDiv" ><i class="fa fa-angle-down"></i></a> </span>
 
                                         </div>
                                     </div>
                                     <div class="row refined-search-area" ng-hide="ocuDiv">
                                         <div class="col-md-12 margin-top-10 margin-bottom-10">
                                             <div ng-repeat="obj in populate.occupation | limitTo:ocucount" class="row">
-                                                <div class="col-md-12">
-                                            <span  class="pull-left refined-search-sub-label">
-                                               <input type="checkbox" value="{{obj.id_occupation}}" name="occupation" ng-click="search()"/> {{obj.occupation}}
-                                            </span>
+                                            <div class="col-md-12 refined-search-sub-label ">
+                                                <span class="pull-left" ng-click="facetSearch(obj.id_occupation,'occupation')">{{obj.occupation}}</span>
+                                               <!--<input type="checkbox" value="{{obj.id_occupation}}" name="occupation" ng-click="search()"/> -->
+
                                                 </div>
                                             </div>
                                         </div>
