--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -2,7 +2,7 @@
     <!-- BEGIN CONTENT BODY -->
     <div class="page-content">
         <!-- BEGIN PAGE HEAD-->
-        <div class="page-head">
+        <div class="page-head" style="margin-left: 20px">
 
 
             <div class="row">
